--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
 
                 <!-- Project 3: Bimanual Manipulation -->
                 <div class="project-card" data-category="learning research" onclick="window.open('https://github.com/virmani11kartik/bimanual-manipulation','_blank')">
-                    <div class="project-image" style="background-image: url('assets/projects/bimanual-manipulation.jpg');">
+                    <div class="project-image" style="background-image: url('assets/projects/franka.jpg');">
                         <div class="project-overlay">
                             <i class="fas fa-external-link-alt"></i>
                         </div>
@@ -541,7 +541,7 @@
 
                 <!-- Project 5: Quadrotor Control -->
                 <div class="project-card" data-category="control perception" onclick="window.open('https://github.com/virmani11kartik/meam620-virmani11kartik','_blank')">
-                    <div class="project-image" style="background-image: url('assets/projects/placeholder.jpg');">
+                    <div class="project-image" style="background-image: url('assets/projects/crazyflie.jpg');">
                         <div class="project-overlay">
                             <i class="fas fa-external-link-alt"></i>
                         </div>
@@ -568,14 +568,14 @@
 
                 <!-- Project 6: Grounded SLAM -->
                 <div class="project-card" data-category="perception learning" onclick="window.open('https://github.com/virmani11kartik/Visual-SLAM-DOF-w-GDino','_blank')">
-                    <div class="project-image" style="background-image: url('assets/projects/placeholder.jpg');">
+                    <div class="project-image" style="background-image: url('assets/projects/slam.png');">
                         <div class="project-overlay">
                             <i class="fas fa-external-link-alt"></i>
                         </div>
                     </div>
                     <div class="project-content">
                         <div class="project-header">
-                            <h3>Grounded SLAM</h3>
+                            <h3>Grounding DINO with SLAM</h3>
                             <span class="project-category">Dynamic Object Filtering</span>
                         </div>
                         <p class="project-description">
@@ -595,7 +595,7 @@
 
                 <!-- Project 7: SVG-MPPI -->
                 <div class="project-card" data-category="control research" onclick="window.open('https://github.com/virmani11kartik/mppi_f1tenth_team4','_blank')">
-                    <div class="project-image" style="background-image: url('assets/projects/placeholder.jpg');">
+                    <div class="project-image" style="background-image: url('assets/projects/f1.jpeg');">
                         <div class="project-overlay">
                             <i class="fas fa-external-link-alt"></i>
                         </div>
