--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
 
                 <!-- Project 9: NeRF -->
                 <div class="project-card" data-category="learning perception" onclick="window.open('https://github.com/virmani11kartik/machine_perception','_blank')">
-                    <div class="project-image" style="background-image: url('assets/projects/placeholder.jpg');">
+                    <div class="project-image" style="background-image: url('assets/projects/perc.png');">
                         <div class="project-overlay">
                             <i class="fas fa-external-link-alt"></i>
                         </div>
