--- a/index.html
+++ b/index.html
@@ -623,14 +623,14 @@
 
                 <!-- Project 8: UKF State Estimation -->
                 <div class="project-card" data-category="perception control" onclick="window.open('https://github.com/virmani11kartik/learning-in-robotics-6500','_blank')">
-                    <div class="project-image" style="background-image: url('assets/projects/placeholder.jpg');">
+                    <div class="project-image" style="background-image: url('assets/projects/kf.png');">
                         <div class="project-overlay">
                             <i class="fas fa-external-link-alt"></i>
                         </div>
                     </div>
                     <div class="project-content">
                         <div class="project-header">
-                            <h3>UKF Vehicle State Estimation</h3>
+                            <h3>Unscented Kalman Filter State Estimation</h3>
                             <span class="project-category">Sensor Fusion</span>
                         </div>
                         <p class="project-description">
