--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="hero-content">
                 <div class="hero-badge">
                     <i class="fas fa-graduation-cap"></i>
-                    <span>MS Student at University of Pennsylvania</span>
+                    <span>MSE MEAM (Mechatronics & Robotics) Student at University of Pennsylvania</span>
                 </div>
                 
                 <div class="hero-main">
