--- a/index.html
+++ b/index.html
@@ -217,13 +217,13 @@
                 <div class="education-timeline">
                     <h3 class="timeline-heading">Education Journey</h3>
                     
-                    <div class="edu-item">
+                   <div class="edu-item">
                         <div class="edu-icon">
-                            <i class="fas fa-university"></i>
+                            <img src="assets/logos/penn.jpeg" alt="University of Pennsylvania logo" class="edu-logo">
                         </div>
                         <div class="edu-content">
                             <div class="edu-header">
-                                <h4>Master of Science</h4>
+                                <h4>Master of Science in Engineering</h4>
                                 <span class="edu-date">2024 - 2026</span>
                             </div>
                             <div class="edu-details">
@@ -236,7 +236,7 @@
 
                     <div class="edu-item">
                         <div class="edu-icon">
-                            <i class="fas fa-graduation-cap"></i>
+                            <img src="assets/logos/vit.webp" alt="VIT Vellore logo" class="edu-logo">
                         </div>
                         <div class="edu-content">
                             <div class="edu-header">
