--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                     <div class="exp-header">
                         <div class="exp-company">
                             <div class="company-logo">
-                                <i class="fas fa-flask"></i>
+                                <img src="assets/logos/modlab.jpg" alt="MODLAB logo" class="company-logo-img">
                             </div>
                             <div class="company-info">
                                 <h3>Research Assistant</h3>
@@ -317,7 +317,7 @@
                     <div class="exp-header">
                         <div class="exp-company">
                             <div class="company-logo">
-                                <i class="fas fa-robot"></i>
+                                <img src="assets/logos/xlab.jpg" alt="X-Lab logo" class="company-logo-img">
                             </div>
                             <div class="company-info">
                                 <h3>Research Assistant</h3>
@@ -362,7 +362,7 @@
                     <div class="exp-header">
                         <div class="exp-company">
                             <div class="company-logo">
-                                <i class="fas fa-industry"></i>
+                                <img src="assets/logos/eil.png" alt="Engineers India Limited logo" class="company-logo-img">
                             </div>
                             <div class="company-info">
                                 <h3>Mechanical Engineer</h3>
