v_7 new uni logo

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                     
                    <div class="edu-item">
                         <div class="edu-icon">
-                            <img src="assets/logos/penn.jpeg" alt="University of Pennsylvania logo" class="edu-logo">
+                            <img src="assets/logos/penn.png" alt="University of Pennsylvania logo" class="edu-logo">
                         </div>
                         <div class="edu-content">
                             <div class="edu-header">
@@ -236,7 +236,7 @@
 
                     <div class="edu-item">
                         <div class="edu-icon">
-                            <img src="assets/logos/vit.webp" alt="VIT Vellore logo" class="edu-logo">
+                            <img src="assets/logos/vit.png" alt="VIT Vellore logo" class="edu-logo">
                         </div>
                         <div class="edu-content">
                             <div class="edu-header">
