--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
                     <div class="edu-item">
                         <div class="edu-icon">
-                            <img src="assets/logos/vit.png" alt="VIT Vellore logo" class="edu-logo">
+                            <img src="assets/logos/vit.webp" alt="VIT Vellore logo" class="edu-logo">
                         </div>
                         <div class="edu-content">
                             <div class="edu-header">
@@ -809,16 +809,15 @@
                     </div>
 
                     <div class="contact-methods">
-                        <a href="/cdn-cgi/l/email-protection#0d667b647f606c63644d7e686c7e23787d68636323686978" class="contact-method">
-                            <div class="method-icon">
-                                <i class="fas fa-envelope"></i>
-                            </div>
-                            <div class="method-content">
-                                <h4>Email</h4>
-                                <p><span class="__cf_email__" data-cfemail="c4afb2adb6a9a5aaad84b7a1a5b7eab1b4a1aaaaeaa1a0b1">[email&#160;protected]</span></p>
-                            </div>
+                        <a href="mailto:kartik8virmani@gmail.com" class="contact-method">
+                        <div class="method-icon">
+                            <i class="fas fa-envelope"></i>
+                        </div>
+                        <div class="method-content">
+                            <h4>Email</h4>
+                            <p>kartik8virmani@gmail.com</p>
+                        </div>
                         </a>
-
                         <a href="tel:+12154528308" class="contact-method">
                             <div class="method-icon">
                                 <i class="fas fa-phone"></i>
@@ -895,7 +894,7 @@
             <div class="footer-content">
                 <div class="footer-left">
                     <div class="footer-logo">
-                        <img src="assets/grasp_logo1_blue.png" alt="Penn Engineering">
+                        <img src="assets/logos/grasp_logo1_blue.png" alt="Penn Engineering">
                         <span>Kartik Virmani</span>
                     </div>
                     <p class="footer-tagline">
