--- a/index.html
+++ b/index.html
@@ -894,7 +894,7 @@
             <div class="footer-content">
                 <div class="footer-left">
                     <div class="footer-logo">
-                        <img src="assets/logos/grasp_logo1_blue.png" alt="Penn Engineering">
+                        <img src="assets/grasp_logo1_blue.png" alt="Penn Engineering">
                         <span>Kartik Virmani</span>
                     </div>
                     <p class="footer-tagline">
