--- a/index.html
+++ b/index.html
@@ -512,32 +512,48 @@
                 </div>
 
                 <!-- Project 4: HAMR -->
-                <div class="project-card" data-category="control research" onclick="window.open('https://github.com/virmani11kartik/HAMR_COMPA_Holonomic_offroad_robot','_blank')">
+                <div class="project-card" data-category="control research"
+                    onclick="window.open('https://github.com/virmani11kartik/HAMR_COMPA_Holonomic_offroad_robot','_blank')">
+
                     <div class="project-image" style="background-image: url('assets/projects/compa.png');">
                         <div class="project-overlay">
                             <i class="fas fa-external-link-alt"></i>
                         </div>
                     </div>
+
                     <div class="project-content">
                         <div class="project-header">
                             <h3>HAMR Holonomic Robot</h3>
                             <span class="project-category">Full-Stack Autonomy</span>
                         </div>
+
                         <p class="project-description">
                             Built a complete ROS 2 autonomy pipeline integrating localization, navigation,
                             and motion planning (RRT, Pure Pursuit, MPC) for holonomic mobile robots.
                         </p>
+
                         <div class="project-tech">
                             <span class="tech-tag">ROS 2</span>
                             <span class="tech-tag">C++</span>
                             <span class="tech-tag">MPC</span>
                             <span class="tech-tag">SLAM</span>
                         </div>
+
                         <div class="project-footer">
-                            <span class="project-link">View on GitHub <i class="fas fa-arrow-right"></i></span>
+                            <a href="https://github.com/virmani11kartik/HAMR_COMPA_Holonomic_offroad_robot"
+                            target="_blank" class="project-link">
+                                GitHub <i class="fas fa-arrow-right"></i>
+                            </a>
+
+                            <a href="https://docs.google.com/presentation/d/1DRRc2N7UpGo44IQoKAjYOS1863U5tzJReBZFgHbDozs/edit?usp=sharing"
+                            target="_blank" class="project-link slides-link"
+                            onclick="event.stopPropagation();">
+                                Project Presentation <i class="fas fa-file-powerpoint"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
+
 
                 <!-- Project 5: Quadrotor Control -->
                 <div class="project-card" data-category="control perception" onclick="window.open('https://github.com/virmani11kartik/meam620-virmani11kartik','_blank')">
