v_7 dl project added

--- a/index.html
+++ b/index.html
@@ -582,6 +582,32 @@
                     </div>
                 </div>
 
+                <!-- Project 10: Deep Learning -->
+                <div class="project-card" data-category="AI and deep_learning" onclick="window.open('https://github.com/virmani11kartik/deep_learning.git','_blank')">
+                    <div class="project-image" style="background-image: url('assets/projects/dl.png');">
+                        <div class="project-overlay">
+                            <i class="fas fa-external-link-alt"></i>
+                        </div>
+                    </div>
+                    <div class="project-content">
+                        <div class="project-header">
+                            <h3>Deep Learning from First Principles</h3>
+                            <span class="project-category">Generative AI</span>
+                        </div>
+                        <p class="project-description">
+                            Built a decoder-only Transformer with causal masking, BPE tokenization, and autoregressive sampling for LLM.
+                            Implemented a VAE and a DDPM for MNIST, logging ELBO terms, loss curves, and denoising trajectories.
+                        </p>
+                        <div class="project-tech">
+                            <span class="tech-tag">PyTorch</span>
+                            <span class="tech-tag">Deep Learning</span>
+                        </div>
+                        <div class="project-footer">
+                            <span class="project-link">View on GitHub <i class="fas fa-arrow-right"></i></span>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- Project 6: Grounded SLAM -->
                 <div class="project-card" data-category="perception learning" onclick="window.open('https://github.com/virmani11kartik/Visual-SLAM-DOF-w-GDino','_blank')">
                     <div class="project-image" style="background-image: url('assets/projects/slam.png');">
