--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
 
                 <!-- Project 10: Deep Learning -->
                 <div class="project-card" data-category="AI and deep_learning" onclick="window.open('https://github.com/virmani11kartik/deep_learning.git','_blank')">
-                    <div class="project-image" style="background-image: url('assets/projects/dl.png');">
+                    <div class="project-image" style="background-image: url('assets/projects/dl2.png');">
                         <div class="project-overlay">
                             <i class="fas fa-external-link-alt"></i>
                         </div>
