--- a/index.html
+++ b/index.html
@@ -180,10 +180,13 @@
                         </div>
                         <h3>Background</h3>
                         <p>
-                            I'm currently pursuing my Master's degree in Mechanical Engineering & Applied Mechanics 
-                            at the University of Pennsylvania, with a concentration in Mechatronics and Robotics. 
-                            With a strong foundation in mechanical engineering from VIT-Vellore (GPA: 9.73/10), 
-                            I've developed expertise in autonomous systems and advanced control.
+                            <p>
+                            I’m a Master’s student in Mechanical Engineering & Applied Mechanics (Mechatronics & Robotics) at the University of Pennsylvania.
+                            I build full-stack robotic systems that combine mechanical design, embedded integration, and autonomy software—taking robots
+                            from CAD and wiring to ROS 2 deployment in simulation and the real world. Previously, I worked at Engineers India Limited,
+                            leading mechatronic integration and automation for large-scale industrial systems, which strengthened my systems engineering
+                            and test-driven mindset.
+                          </p>
                         </p>
                     </div>
 
@@ -193,11 +196,12 @@
                         </div>
                         <h3>Research Focus</h3>
                         <p>
-                            My research centers on mobile humanoid robots, autonomous vehicle racing, and 
-                            advanced control systems. I have hands-on experience with ROS2, motion planning 
-                            algorithms, state estimation, and real-time embedded systems. I'm particularly 
-                            interested in sim-to-real transfer and robust control in dynamic environments.
-                        </p>
+                        My current work spans mobile robotics and embodied autonomy: perception-driven navigation (LiDAR/vision), state estimation and
+                        sensor fusion, and planning/control (MPC, sampling-based planning, MPPI). I also build sim-to-real learning pipelines for drones
+                        and manipulation using IsaacLab, with a focus on reliable deployment—safety gating, telemetry, and hardware authority handoff.
+                        I’m especially interested in robust autonomy in dynamic environments, where perception, tracking, and control must stay consistent
+                        under real-world noise.
+                      </p>
                     </div>
 
                     <div class="about-card">
@@ -206,11 +210,11 @@
                         </div>
                         <h3>Professional Goals</h3>
                         <p>
-                            I'm seeking opportunities to apply my expertise in robotics and autonomous systems 
-                            to real-world challenges. I'm passionate about developing solutions that push the 
-                            boundaries of what robots can achieve, from industrial automation to service robotics 
-                            and beyond.
-                        </p>
+                        I’m looking for robotics roles where I can own systems end-to-end—mechanical design and prototyping, embedded/sensor integration,
+                        and autonomy software (ROS 2, planning, control, perception). I enjoy building real robots, validating them with structured testing,
+                        and iterating quickly from simulation to hardware. Long-term, I want to work on high-impact autonomous systems in the real world:
+                        mobile manipulation, field robotics, industrial automation, or autonomous vehicles.
+                      </p>
                     </div>
                 </div>
 
@@ -1105,7 +1109,7 @@
             </div>
         </div>
     </section>
-    
+
     <!-- Skills Section -->
     <section id="skills" class="skills">
         <div class="container">
