--- a/index.html
+++ b/index.html
@@ -852,7 +852,7 @@
                     </div>
                 </div>
 
-                <!-- Design 4: Humanoid Platform -->
+                <!-- Design 4: Humanoid Platform
                 <div class="design-card">
                     <div class="design-image">
                         <img src="assets/designs/humanoid-platform.png" alt="Humanoid Robot Base Platform">
@@ -889,7 +889,7 @@
                             <span class="design-tag">Rapid Prototyping</span>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
 
             <div class="design-skills-section">
