--- a/index.html
+++ b/index.html
@@ -747,7 +747,7 @@
                     <div class="design-content">
                         <h3>Holonomic Autonomous Mobile Robot (HAMR) Chassis Design</h3>
                         <p class="design-description">
-                            Designed modular aluminum chassis for mecanum-wheeled robot with integrated electronics bay, 
+                            Designed modular robot with aluminum chassis for custom designed ball caster with integrated electronics bay, 
                             sensor mounting, and thermal management. Optimized for 15kg payload while maintaining low 
                             center of gravity for dynamic maneuvers. Considered DFM constraints, fastener selection, 
                             and wire routing throughout assembly.
@@ -759,7 +759,7 @@
                             </div>
                             <div class="spec-item">
                                 <i class="fas fa-cube"></i>
-                                <span>Assembly (150+ parts)</span>
+                                <span>Assembly (15+ parts)</span>
                             </div>
                             <div class="spec-item">
                                 <i class="fas fa-layer-group"></i>
@@ -787,7 +787,7 @@
                         <h3>Custom Mark4 Quadcopter Frame with Onboard Computing</h3>
                         <p class="design-description">
                             Modified commercial Mark4 drone frame, designing custom carbon fiber top plate to accommodate 
-                            Jetson Nano, GPS module, and telemetry system. Prioritized vibration isolation, heat dissipation, 
+                            RPi5, GPS module, and telemetry system. Prioritized vibration isolation, heat dissipation, 
                             and electromagnetic interference mitigation while maintaining structural rigidity for 3kg MTOW.
                         </p>
                         <div class="design-specs">
@@ -826,8 +826,7 @@
                         <p class="design-description">
                             Led chassis design and steering geometry for formula-style race car (Team UTTejit FSAE). 
                             Implemented space frame construction with optimized node placement via FEA. Designed Ackermann 
-                            steering with adjustable tie-rod geometry for tunable handling characteristics. Validated through 
-                            CFD pitch sensitivity analysis published in SAE Technical Papers.
+                            steering with adjustable tie-rod geometry for tunable handling characteristics.
                         </p>
                         <div class="design-specs">
                             <div class="spec-item">
