--- a/index.html
+++ b/index.html
@@ -290,23 +290,23 @@
                     </div>
                     <div class="exp-content">
                         <ul class="exp-achievements">
-                            <li>
-                                <i class="fas fa-check-circle"></i>
-                                <span>Engineered passively stable mobile humanoid robots by optimizing center of mass positioning and implementing balance control algorithms</span>
-                            </li>
-                            <li>
-                                <i class="fas fa-check-circle"></i>
-                                <span>Developed comprehensive ROS Gazebo simulation environment for nonlinear pendulum dynamics with real-time visualization</span>
-                            </li>
-                            <li>
-                                <i class="fas fa-check-circle"></i>
-                                <span>Implemented advanced energy-shaping and feedback linearization controllers for robust stability</span>
-                            </li>
-                            <li>
-                                <i class="fas fa-check-circle"></i>
-                                <span>Prototyped mechanical parts using CAD and integrated IMU/encoder feedback loops for precise state estimation</span>
-                            </li>
-                        </ul>
+                      <li>
+                        <i class="fas fa-check-circle"></i>
+                        <span>Designed and integrated a holonomic mobile robot platform (mechanical + electrical + ROS 2), including sensor mounting, wiring, and compute integration</span>
+                      </li>
+                      <li>
+                        <i class="fas fa-check-circle"></i>
+                        <span>Built ROS 2 pipelines for localization and navigation using LiDAR/camera/IMU/encoders, validated through real-world field tests and repeatable experiment logs</span>
+                      </li>
+                      <li>
+                        <i class="fas fa-check-circle"></i>
+                        <span>Developed planning and control modules for reliable trajectory tracking and constraint-aware motion, with telemetry instrumentation for rapid iteration</span>
+                      </li>
+                      <li>
+                        <i class="fas fa-check-circle"></i>
+                        <span>Rapidly prototyped and iterated mechanical components (CAD, 3D printing/CNC), improving serviceability, sensor alignment, and robustness</span>
+                      </li>
+                    </ul>
                         <div class="exp-tags">
                             <span class="exp-tag">ROS 2</span>
                             <span class="exp-tag">Control Systems</span>
