--- a/index.html
+++ b/index.html
@@ -781,7 +781,7 @@
                   <div class="design-card">
                       <div class="design-image"
                           data-gallery="drone"
-                          data-images='["assets/designs/mark4-drone.png", "assets/designs/drone-top.png", "assets/designs/drone-side.png", "assets/designs/drone-assembly.png"]'>
+                          data-images='["assets/designs/mark4-drone.png", "assets/designs/drone-top.png", "assets/designs/drone-side.png"]'>
                           <img src="assets/designs/mark4-drone.png" alt="Modified Mark4 Drone Frame">
                           <div class="design-overlay">
                               <i class="fas fa-search-plus"></i>
